# 24.1-dz

./: Dockerfile  README.md  coverage.json  pyproject.toml  testo.py
config/: settings.py  urls.py
lms/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_subscription_options.py
users/: admin.py  models.py  permissions.py  serializer.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py  fill-payments.py  fill-users.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_payment_type.py  0004_payments_link_payments_session_id.py
