[tool.poetry]
name = "pythonproject62"
version = "0.1.0"
description = ""
authors = ["Borodin Dmitriy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
rest-framework-simplejwt = "^0.0.2"
psycopg2 = "^2.9.9"
drf-yasg = "^1.21.7"
celery = "^5.4.0"
eventlet = "^0.37.0"
redis = "^5.2.0"
stripe = "^11.1.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
